java8-sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java-sample
    app.kubernetes.io/component: java-sample
    app.kubernetes.io/instance: java-sample
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: sample-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-8-el7
  name: java-sample
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: java-sample
    deploymentconfig: java-sample
  sessionAffinity: None
  type: ClusterIP
