java8-sample-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: java-sample
    app.kubernetes.io/component: java-sample
    app.kubernetes.io/instance: java-sample
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: sample-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-8-el7
  name: java-sample
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: java-sample
    weight: 100
  wildcardPolicy: None
